Deduplicate workflow response builders (#38828)
* Deduplicate workflow response builders

Remove duplicated workflow response builders for MCP features that only
delegate to the shared rule DistSQL payload builder.

Rename the remaining encrypt and mask response builders with feature
prefixes because they include feature-specific masked property previews.

* Pin MCP LLM E2E base image digest

* Deduplicate workflow response builders

Remove duplicated workflow response builders for MCP features that only
delegate to the shared rule DistSQL payload builder.

Rename the remaining encrypt and mask response builders with feature
prefixes because they include feature-specific masked property previews.

* Deduplicate workflow response builders

Remove duplicated workflow response builders for MCP features that only
delegate to the shared rule DistSQL payload builder.

Rename the remaining encrypt and mask response builders with feature
prefixes because they include feature-specific masked property previews.

* Deduplicate workflow response builders

Remove duplicated workflow response builders for MCP features that only
delegate to the shared rule DistSQL payload builder.

Rename the remaining encrypt and mask response builders with feature
prefixes because they include feature-specific masked property previews.

* Deduplicate workflow response builders

Remove duplicated workflow response builders for MCP features that only
delegate to the shared rule DistSQL payload builder.

Rename the remaining encrypt and mask response builders with feature
prefixes because they include feature-specific masked property previews.

* Deduplicate workflow response builders

Remove duplicated workflow response builders for MCP features that only
delegate to the shared rule DistSQL payload builder.

Rename the remaining encrypt and mask response builders with feature
prefixes because they include feature-specific masked property previews.

* Deduplicate workflow response builders

Remove 