@@ -22,12 +22,15 @@ import org.apache.shardingsphere.mcp.api.protocol.exception.MCPQueryFailedExcept
 import org.apache.shardingsphere.mcp.support.database.spi.MCPFeatureQueryFacade;
 import org.junit.jupiter.api.Test;
 
+import java.sql.SQLException;
+import java.sql.SQLSyntaxErrorException;
 import java.util.List;
 import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -42,16 +45,17 @@ class MaskRuleInspectionServiceTest {
                 .thenReturn(List.of(Map.of("column", "phone", "algorithm_type", "MASK_FROM_X_TO_Y", "algorithm_props", "from-x=4")));
         List<Map<String, Object>> actual = service.queryMaskRules(queryFacade, "logic_db");
         assertThat(actual.size(), is(1));
-        assertThat(actual.get(0).get("column"), is("phone"));
-        assertThat(actual.get(0).get("algorithm_type"), is("MASK_FROM_X_TO_Y"));
-        assertThat(actual.get(0).get("algorithm_props"), is("from-x=4"));
+        assertThat(actual.getFirst().get("column"), is("phone"));
+        assertThat(actual.getFirst().get("algorithm_type"), is("MASK_FROM_X_TO_Y"));
+        assertThat(actual.getFirst().get("algorithm_props"), is("from-x=4"));
     }
     
     @Test
     void assertQueryMaskRulesForDatabaseWithUnavailableDistSQL() {
         MCPFeatureQueryFacade queryFacade = mock(MCPFeatureQueryFacade.class);
-        when(queryFacade.query("logic_db", "", "SHOW MASK RULES FROM logic_db")).thenThrow(new MCPQueryFailedException("unsupported"));
-        assertThrows(MCPQueryFailedException.class, () -> service.queryMaskRules(queryFacade, "logic_db"));
+        when(queryFacade.query("logic_db", "", "SHOW MASK RULES FROM logic_db"))
+                .thenThrow(new MCPQueryFailedException("syntax error near 'MASK RULES FROM logic_db'", new SQLSyntaxErrorException("syntax error")));
+        assertTrue(service.queryMaskRules(queryFacade, "logic_db").isEmpty());
     }
     
     @Test
@@ -60,13 +64,22 @@ class MaskRuleInspectionServiceTest {
         when(queryFacade.query("logic_db", "", "SHOW MASK RULE orders FROM logic_db"))
                 .thenReturn(List.of(Map.of("column", "phone", "algorithm_type", "MD5")));
         List<Map<String, Object>> actual = service.queryMaskRules(queryFacade, "logic_db", "orders");
-        assertThat(actual.get(0).get("column"), is("phone"));
+        assertThat(actual.getFirst().get("column"), is("phone"));
     }
     
     @Test
     void assertQueryMaskRulesWithUnavailableDistSQL() {
         MCPFeatureQueryFacade queryFacade = mock(MCPFeatureQueryFacade.class);
-        when(queryFacade.query("logic_db", "", "SHOW MASK RULE orders FROM logic_db")).thenThrow(new MCPQueryFailedException("unsupported"));
+        when(queryFacade.query("logic_db", "", "SHOW MASK RULE orders FROM logic_db"))
+                .thenThrow(new MCPQueryFailedException("syntax error near 'MASK RULE orders FROM logic_db'", new SQLSyntaxErrorException("syntax error")));
+        assertTrue(service.queryMaskRules(queryFacade, "logic_db", "orders").isEmpty());
+    }
+    
+    @Test
+    void assertQueryMaskRulesPropagatesQueryFailure() {
+        MCPFeatureQueryFacade queryFacade = mock(MCPFeatureQueryFacade.class);
+        when(queryFacade.query("logic_db", "", "SHOW MASK RULE orders FROM logic_db"))
+                .thenThrow(new MCPQueryFailedException("Connection refused.", new SQLException("Connection refused.")));
         assertThrows(MCPQueryFailedException.class, () -> service.queryMaskRules(queryFacade, "logic_db", "orders"));
     }
     
@@ -76,7 +89,7 @@ class MaskRuleInspectionServiceTest {
         when(queryFacade.query("逻辑库", "", "SHOW MASK RULE `订单` FROM `逻辑库`"))
                 .thenReturn(List.of(Map.of("column", "phone", "algorithm_type", "MD5")));
         List<Map<String, Object>> actual = service.queryMaskRules(queryFacade, "逻辑库", "订单");
-        assertThat(actual.get(0).get("column"), is("phone"));
+        assertThat(actual.getFirst().get("column"), is("phone"));
     }
     
     @Test
@@ -90,11 +103,11 @@ class MaskRuleInspectionServiceTest {
         MCPFeatureQueryFacade queryFacade = mock(MCPFeatureQueryFacade.class);
         when(queryFacade.queryWithAnyDatabase("SHOW MASK ALGORITHM PLUGINS")).thenReturn(List.of(Map.of("type", "MASK_FROM_X_TO_Y"), Map.of("type", "CUSTOM")));
         List<Map<String, Object>> actual = service.queryMaskAlgorithms(queryFacade);
-        assertThat(actual.get(0).get("type"), is("MASK_FROM_X_TO_Y"));
-        assertThat(actual.get(0).get("required_properties"), is(List.of("from-x", "to-y", "replace-char")));
-        assertThat(actual.get(0).get("optional_properties"), is(List.of()));
+        assertThat(actual.getFirst().get("type"), is("MASK_FROM_X_TO_Y"));
+        assertThat(actual.getFirst().get("required_properties"), is(List.of("from-x", "to-y", "replace-char")));
+        assertThat(actual.getFirst().get("optional_properties"), is(List.of()));
         List<?> propertyTemplates = (List<?>) actual.get(0).get("property_templates");
-        assertThat(((Map<?, ?>) propertyTemplates.get(0)).get("property_key"), is("from-x"));
+        assertThat(((Map<?, ?>) propertyTemplates.getFirst()).get("property_key"), is("from-x"));
         assertThat(actual.get(1).get("type"), is("CUSTOM"));
         assertThat(actual.get(1).get("property_templates"), is(List.of()));
     }
@@ -102,7 +115,18 @@ class MaskRuleInspectionServiceTest {
     @Test
     void assertQueryMaskAlgorithmsWithUnavailableDistSQL() {
         MCPFeatureQueryFacade queryFacade = mock(MCPFeatureQueryFacade.class);
-        when(queryFacade.queryWithAnyDatabase("SHOW MASK ALGORITHM PLUGINS")).thenThrow(new MCPQueryFailedException("unsupported"));
+        when(queryFacade.queryWithAnyDatabase("SHOW MASK ALGORITHM PLUGINS"))
+                .thenThrow(new MCPQueryFailedException("syntax error near 'MASK ALGORITHM PLUGINS'", new SQLSyntaxErrorException("syntax error")));
+        List<Map<String, Object>> actual = service.queryMaskAlgorithms(queryFacade);
+        assertThat(actual.getFirst().get("type"), is("KEEP_FIRST_N_LAST_M"));
+        assertThat(actual.getFirst().get("required_properties"), is(List.of("first-n", "last-m", "replace-char")));
+    }
+    
+    @Test
+    void assertQueryMaskAlgorithmsPropagatesQueryFailure() {
+        MCPFeatureQueryFacade queryFacade = mock(MCPFeatureQueryFacade.class);
+        when(queryFacade.queryWithAnyDatabase("SHOW MASK ALGORITHM PLUGINS"))
+                .thenThrow(new MCPQueryFailedException("Connection refused.", new SQLException("Connection refused.")));
         assertThrows(MCPQueryFailedException.class, () -> service.queryMaskAlgorithms(queryFacade));
     }
 }
